objects/SMAX_PS_Drop_Ship_Locations__c.object
<CustomObject>
    <description>Denotes addresses for drop ship locations.</description>
    <label>Drop Ship Location</label>
    <nameField>
        <displayFormat>DSL-{000000}</displayFormat>
        <label>Drop Ship Locations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Drop Ship Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SMAX_PS_ToStreet1__c</fullName>
        <label>To Street 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ToStreet2__c</fullName>
        <label>To Street 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_ToStreet3__c</fullName>
        <label>To Street 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Warehouse__c</fullName>
        <description>Name/number of the warehouse from/to which the products will be shipped</description>
        <inlineHelpText>Name/number of the warehouse from/to which the products will be shipped</inlineHelpText>
        <label>Warehouse</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_IsDropShip__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is Drop Ship</description>
        <inlineHelpText>Is Drop Ship</inlineHelpText>
        <label>Is Drop Ship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Destination_Zip__c</fullName>
        <description>“Zip/Postal Code” part of the destination address</description>
        <inlineHelpText>“Zip/Postal Code” part of the destination address</inlineHelpText>
        <label>To Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Global_To_State__c</fullName>
        <description>Global to state field that will capture the state codes to support SAP integration and is dependent on SMAX_PS_Global_To_Country__c</description>
        <inlineHelpText>Global to state field that will capture the state codes to support SAP integration and is dependent on SMAX_PS_Global_To_Country__c</inlineHelpText>
        <label>To State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SMAX_PS_Global_To_Country__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>001</fullName>
                </value>
                <value>
                    <fullName>002</fullName>
                </value>
                <value>
                    <fullName>003</fullName>
                </value>
                <value>
                    <fullName>004</fullName>
                </value>
                <value>
                    <fullName>005</fullName>
                </value>
                <value>
                    <fullName>006</fullName>
                </value>
                <value>
                    <fullName>007</fullName>
                </value>
                <value>
                    <fullName>008</fullName>
                </value>
                <value>
                    <fullName>009</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>010</fullName>
                </value>
                <value>
                    <fullName>011</fullName>
                </value>
                <value>
                    <fullName>012</fullName>
                </value>
                <value>
                    <fullName>013</fullName>
                </value>
                <value>
                    <fullName>014</fullName>
                </value>
                <value>
                    <fullName>015</fullName>
                </value>
                <value>
                    <fullName>016</fullName>
                </value>
                <value>
                    <fullName>017</fullName>
                </value>
                <value>
                    <fullName>018</fullName>
                </value>
                <value>
                    <fullName>019</fullName>
                </value>
                <value>
                    <fullName>01-AP-Andra Pradesh</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>020</fullName>
                </value>
                <value>
                    <fullName>021</fullName>
                </value>
                <value>
                    <fullName>02-AR-Arunachal Pradesh</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>030</fullName>
                </value>
                <value>
                    <fullName>03-AS-Assam</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_DestinationName1__c</fullName>
        <description>Destination Name1</description>
        <inlineHelpText>Destination Name1</inlineHelpText>
        <label>Company</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_DestinationName2__c</fullName>
        <description>Destination Name2</description>
        <inlineHelpText>Destination Name2</inlineHelpText>
        <label>Care Of</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_DestinationName3__c</fullName>
        <description>Destination Name3</description>
        <inlineHelpText>Destination Name3</inlineHelpText>
        <label>Phone</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Destination_City__c</fullName>
        <description>“City” part of the destination address</description>
        <inlineHelpText>“City” part of the destination address</inlineHelpText>
        <label>To City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Global_To_Country__c</fullName>
        <inlineHelpText>List of SAP Country values.</inlineHelpText>
        <label>To Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SAP_Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Destination_Street__c</fullName>
        <description>“Street” part of the destination address</description>
        <inlineHelpText>“Street” part of the destination address</inlineHelpText>
        <label>To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Technician_Equipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Denotes the technician that is related to the drop ship location</description>
        <inlineHelpText>Denotes the technician that is related to the drop ship location</inlineHelpText>
        <label>Technician/Equipment</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Drop Ship Locations</relationshipLabel>
        <relationshipName>Drop_Ship_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>